--- a/index.html
+++ b/index.html
@@ -5,17 +5,215 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css\style.css">
-   <title>Document</title>
+   <link rel="stylesheet" href="css/style.css">
+   <title>Flexbox</title>
 </head>
 
 <body>
-   <h1>Hello world!</h1>
-   <h2>Hello</h2>
-   <h3>Barev</h3>
-   <h4>Guto</h4>
-   <h5>Putoooo</h5>
-   <h6>kuuuuchuit</h6>
+   <div class="wrapper">
+      <div class="content">
+         <div class="hi">
+            <div class="conteiner">
+               <div class="hi__row">
+                  <div class="hi__body">
+                     <div class="hi__tittle">
+                        <h1>FlexBox</h1>
+                     </div>
+                     <ul class="hi__list">
+                        <a href="cv.html" target="_blank">
+                           <li>CV</li>
+                        </a>
+                        <a href="registration.html" target="_blank">
+                           <li>Registration Form</li>
+                        </a>
+                        <a href="exer.html" target="_blank">
+                           <li>JavaScript Exercise</li>
+                        </a>
+                        <a href="https://www.w3schools.com/css/css3_flexbox.asp" target="_blank">
+                           <li>FlexBox Information</li>
+                        </a>
+                     </ul>
+                  </div>
+                  <div class="hi__img">
+                     <img src="image/flex.png" alt="">
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="what">
+            <div class="conteiner">
+               <div class="what__row">
+                  <div class="what__img">
+                     <img src="image/0.png" alt="">
+                  </div>
+                  <div class="what__body">
+                     <div class="what__title title">
+                        What is FlexBox?
+                     </div>
+                     <div class="what__text">
+                        <p>Flexbox is a whole module that contains a set of properties and their values for both the
+                           parent flex container and its
+                           child flex items.</p>
+                        <p>The main advantage of flexible FLEX layout is the ability to change the width / height of the
+                           space around and the order
+                           of the flex items in order to best fill the available space of the flex container</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="columns">
+            <div class="conteiner">
+               <div class="columns__tittle title">Columns with flex containers</div>
+            </div>
+            <div class="columns__row">
+               <div class="columns__column">
+                  <div class="columns__item">
+                     <div class="item__row">
+                        <div class="item__img">
+                           <img src="image/1.png" alt="">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__tittle">
+                              The description for the image
+                           </div>
+                           <div class="item__text">
+                              Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem
+                              ullam quos aut nostrum
+                              cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
+                              dolor.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="columns__column">
+                  <div class="columns__item">
+                     <div class="item__row">
+                        <div class="item__img">
+                           <img src="image/3.png" alt="">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__tittle">
+                              The description for the image
+                           </div>
+                           <div class="item__text">
+                              Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem
+                              ullam quos aut
+                              nostrum
+                              cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
+                              dolor.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="columns__column">
+                  <div class="columns__item">
+                     <div class="item__row">
+                        <div class="item__img">
+                           <img src="image/0.png" alt="">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__tittle">
+                              The description for the image
+                           </div>
+                           <div class="item__text">
+                              Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem
+                              ullam quos aut
+                              nostrum
+                              cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
+                              dolor.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="columns__column">
+                  <div class="columns__item">
+                     <div class="item__row">
+                        <div class="item__img">
+                           <img src="image/1.png" alt="">
+                        </div>
+                        <div class="item__body">
+                           <div class="item__tittle">
+                              The description for the image
+                           </div>
+                           <div class="item__text">
+                              Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem
+                              ullam quos aut
+                              nostrum
+                              cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis
+                              dolor.
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="vertical">
+            <div class="conteiner">
+               <div class="vertical__tittle title">Vertical alignment</div>
+            </div>
+            <div class="vertical__body">
+               <div class="vertical__row">
+                  <div class="vertical__column">
+                     <div class="vertical__item">
+                        <div class="vertical__label">Lorem inpus</div>
+                        <div class="vertical__sublabel">Lorem</div>
+                        <div class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
+                           tenetur fugit vel, eligendi illum, placeat quo vero
+                           reiciendis consectetur.</div>
+                        <a href="" class="btn">Lorem</a>
+                     </div>
+                  </div>
+                  <div class="vertical__column">
+                     <div class="vertical__item">
+                        <div class="vertical__label">Lorem inpus</div>
+                        <div class="vertical__sublabel">Lorem</div>
+                        <div class="vertical__text">
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi
+                              illum, placeat quo vero
+                              reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora
+                              voluptatum dolorum.</p>
+
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi
+                              illum, placeat quo vero
+                              reiciendis consectetur tempora voluptatum dolorum.</p>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi
+                              illum, placeat quo vero
+                              reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora
+                              voluptatum dolorum.</p>
+                        </div>
+                        <a href="" class="btn">Lorem</a>
+                     </div>
+                  </div>
+                  <div class="vertical__column">
+                     <div class="vertical__item">
+                        <div class="vertical__label">Lorem inpus</div>
+                        <div class="vertical__sublabel">Lorem</div>
+                        <div class="vertical__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
+                           tenetur fugit vel,
+                           eligendi illum, placeat quo vero
+                           reiciendis consectetur.</div>
+                        <a href="" class="btn">Lorem</a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <footer class="footer">
+         <div class="conteiner">
+            <div class="footer__row">
+               <div class="footer__text">CV from 2022</div>
+            </div>
+         </div>
+      </footer>
+   </div>
+   <script type="text/javascript" src="js/jquery.js"></script>
+   <script src="js/script.js"></script>
 </body>
 
 </html>
